fix arm platform and net apps

--- a/cpu/arm/stm32f103/Makefile.stm32f103cb
+++ b/cpu/arm/stm32f103/Makefile.stm32f103cb
@@ -41,13 +41,24 @@ CONTIKI_SOURCEFILES        += $(CONTIKI_TARGET_SOURCEFILES)
 THREADS =
 
 ### Compiler definitions
-CC       = arm-elf-gcc
-LD       = arm-elf-ld
-AS       = arm-elf-as
-AR       = arm-elf-ar
-NM       = arm-elf-nm
-OBJCOPY  = arm-elf-objcopy
-STRIP    = arm-elf-strip
+#CC       = arm-elf-gcc
+#LD       = arm-elf-ld
+#AS       = arm-elf-as
+#AR       = arm-elf-ar
+#NM       = arm-elf-nm
+#OBJCOPY  = arm-elf-objcopy
+#STRIP    = arm-elf-strip
+
+### Compiler definitions
+GCC      = 1
+CC       = arm-none-eabi-gcc
+LD       = arm-none-eabi-gcc
+SIZE     = arm-none-eabi-size
+AS       = arm-none-eabi-as
+AR       = arm-none-eabi-ar
+NM       = arm-none-eabi-nm
+OBJCOPY  = arm-none-eabi-objcopy
+STRIP    = arm-none-eabi-strip
 
 XSLTPROC=xsltproc
 
