--- a/examples/nrf51822/capture/Makefile
+++ b/examples/nrf51822/capture/Makefile
@@ -1,6 +1,6 @@
-TARGET = Core51822
+TARGET = nord51822
 
-CONTIKI_PROJECT = tx-hello
+CONTIKI_PROJECT = ping-hello.bin pong-hello.bin
 
 all: $(CONTIKI_PROJECT) 
 
